@@ -33,3 +33,14 @@ Typical measures are:
 On some parts there are run-off areas where the side width
 is little bit more (drawn on the left).
 In the airport area there are modifications for this scheme.
+
+I had trouble getting any height data, so the height changes
+are purely random:
+python
+import random
+random.seed()
+for i in range (50):
+  random.uniform(-2.0, 2.0)
+
+Only exception is the Bay Shore DR area where there is a visual
+bump that can be seen clearly on the videos.
