@@ -1,8 +1,5 @@
 TODO
 
-v0.1
-- correct height
-- initial release
 v0.2
 - add pits
 - add bankings
