@@ -1,6 +1,7 @@
 
 v0.1
   - initial release
+	- correct height
 	- correct barrier placement
 	- correct side widths
 	- correct curb placement
